Fixed z-index on scroll-up and theme-switch

--- a/main.css
+++ b/main.css
@@ -153,6 +153,7 @@ ol.hide-style {
 
 /* THEME SWITCHER (přepínař dark modu) */
 #theme-switcher {
+	z-index: 1000;
 	position: absolute;
 	top: 1em;
 	right: 1em;
@@ -173,6 +174,7 @@ ol.hide-style {
 }
 
 #scroll-up {
+	z-index: 1000;
 	position: fixed;
 	bottom: 1em;
 	right: 1em;
